# mypackage

./: .coveragerc  .dockerignore  .gitignore  .isort.cfg  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.sh  tox.ini
.github/workflows/: approval-workflow.yml  deploy-prod.yml  deploy-staging.yml  python-ci.yml  python-package.yml
docs/: Makefile  README.md  cli.md  code.md  conf.py  index.md  make.bat  requirements.txt
mypackage/: __init__.py  __main__.py  mypackage.py
mypackage/demo/: demo.py
tests/: helpers.py  mypackage_test.py  requirements.txt
tests/demo/: demo_test.py
