[metadata]
license_file = LICENSE
name = MyPackage
version = attr: mypackage.__version__
author = Jelle van de Haterd
author_email = j.vandehaterd@developers.nl
description = Python boilerplate project
long_description = file:README.md
long_description_content_type=text/markdown
url = https://somewhere.readthedocs.io/
project_urls =
    MyPackage documentation =  https://github.com
    MyPackage source =  https://github.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.7
install_requires =
    click>=7.1.1
    requests>=2.23.0
    jsonschema>=3.2.0
    pyyaml>=5.3.1
    docker>=4.2.0
    gitpython>=3.1.0
setup_requires =
    setuptools_scm[toml] >= 3.4
    setuptools >= 46.4.0

[options.extras_require]
docs = sphinx
tests = coverage[toml]>=5.0.2; pylint; pytest; pytest-cov; responses;
dev = tests; pytest; tox;

[options.entry_points]
mypackage.registered_commands =
    demo = mypackage.mypackage:demo
console_scripts =
    mypackage=mypackage.mypackage:main

[bdist_wheel]
universal=1
